feat: adiciona camada modular de banco de dados PostgreSQL - Cria camada 03-database com instância AMD Always Free (E2.1.Micro) - Implementa script de provisionamento automático do PostgreSQL via Cloud-init - Adiciona regras de firewall NSG isolando o DB para acesso interno apenas - Atualiza pipeline CI/CD para incluir deploy automatizado da nova camada - Exporta vcn_id da infra-base para uso em Groups de Segurança granulares

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -8,3 +8,6 @@ api_private_key_path    = "/home/usuario/.oci/oci_api_key.pem"
 cloudflare_api_token    = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 discord_webhook_url     = "https://discordapp.com/api/webhooks/*********"
 grafana_admin_password  = "sua-senha-super-segura"
+db_name                 = "meu_banco_de_dados"
+db_user                 = "admin_user"
+db_password             = "sua-senha-segura-aqui"
