--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,6 +54,11 @@ jobs:
       # Discord Webhook URL
       TF_VAR_discord_webhook_url: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
+      # Variáveis do Banco de Dados
+      TF_VAR_db_name: ${{ secrets.DB_NAME }}
+      TF_VAR_db_user: ${{ secrets.DB_USER }}
+      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -84,6 +89,13 @@ jobs:
             -backend-config="bucket=$TF_VAR_state_bucket_name" \
             -backend-config="region=us-east-1"
 
+      - name: Terraform Init DB
+        id: init_db
+        run: |
+          terraform -chdir=terraform/layers/03-database init \
+            -backend-config="bucket=$TF_VAR_state_bucket_name" \
+            -backend-config="region=us-east-1"
+
       - name: Terraform Init K8s
         id: init_k8s
         run: |
@@ -95,6 +107,7 @@ jobs:
         id: validate
         run: |
           terraform -chdir=terraform/layers/01-base-infra validate -no-color
+          terraform -chdir=terraform/layers/03-database validate -no-color
           terraform -chdir=terraform/layers/02-kubernetes validate -no-color
 
       - name: Terraform Plan
@@ -102,6 +115,7 @@ jobs:
         if: github.event_name == 'pull_request'
         run: |
           terraform -chdir=terraform/layers/01-base-infra plan -no-color -input=false -var-file="../../../terraform.auto.tfvars"
+          terraform -chdir=terraform/layers/03-database plan -no-color -input=false -var-file="../../../terraform.auto.tfvars"
           terraform -chdir=terraform/layers/02-kubernetes plan -no-color -input=false -var-file="../../../terraform.auto.tfvars"
         continue-on-error: true
 
@@ -109,6 +123,7 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event.inputs.terraform_action != 'destroy'
         run: |
           terraform -chdir=terraform/layers/01-base-infra apply -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
+          terraform -chdir=terraform/layers/03-database apply -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
           terraform -chdir=terraform/layers/02-kubernetes apply -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
 
       # Destroy full da infraestrutura
@@ -119,9 +134,11 @@ jobs:
           if [ "$ACTION" == "destroy" ]; then
             echo "⚠️ Executando Destroy COMPLETO da infraestrutura..."
             terraform -chdir=terraform/layers/02-kubernetes destroy -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
+            terraform -chdir=terraform/layers/03-database destroy -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
             terraform -chdir=terraform/layers/01-base-infra destroy -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
           else
             terraform -chdir=terraform/layers/01-base-infra $ACTION -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
+            terraform -chdir=terraform/layers/03-database $ACTION -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
             terraform -chdir=terraform/layers/02-kubernetes $ACTION -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
           fi
 
