feat: Adiciona a camada de Terraform para provisionamento do MinIO Storage e integra-a ao workflow CI/CD.

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,6 +59,10 @@ jobs:
       TF_VAR_db_user: ${{ secrets.DB_USER }}
       TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
 
+      # Variáveis do MinIO
+      TF_VAR_minio_root_user: ${{ secrets.MINIO_ROOT_USER }}
+      TF_VAR_minio_root_password: ${{ secrets.MINIO_ROOT_PASSWORD }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -96,6 +100,13 @@ jobs:
             -backend-config="bucket=$TF_VAR_state_bucket_name" \
             -backend-config="region=us-east-1"
 
+      - name: Terraform Init Storage
+        id: init_storage
+        run: |
+          terraform -chdir=terraform/layers/04-storage init \
+            -backend-config="bucket=$TF_VAR_state_bucket_name" \
+            -backend-config="region=us-east-1"
+
       - name: Terraform Init K8s
         id: init_k8s
         run: |
@@ -108,6 +119,7 @@ jobs:
         run: |
           terraform -chdir=terraform/layers/01-base-infra validate -no-color
           terraform -chdir=terraform/layers/03-database validate -no-color
+          terraform -chdir=terraform/layers/04-storage validate -no-color
           terraform -chdir=terraform/layers/02-kubernetes validate -no-color
 
       - name: Terraform Plan
@@ -116,6 +128,7 @@ jobs:
         run: |
           terraform -chdir=terraform/layers/01-base-infra plan -no-color -input=false -var-file="../../../terraform.auto.tfvars"
           terraform -chdir=terraform/layers/03-database plan -no-color -input=false -var-file="../../../terraform.auto.tfvars"
+          terraform -chdir=terraform/layers/04-storage plan -no-color -input=false -var-file="../../../terraform.auto.tfvars"
           terraform -chdir=terraform/layers/02-kubernetes plan -no-color -input=false -var-file="../../../terraform.auto.tfvars"
         continue-on-error: true
 
@@ -124,6 +137,7 @@ jobs:
         run: |
           terraform -chdir=terraform/layers/01-base-infra apply -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
           terraform -chdir=terraform/layers/03-database apply -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
+          terraform -chdir=terraform/layers/04-storage apply -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
           terraform -chdir=terraform/layers/02-kubernetes apply -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
 
       # Destroy full da infraestrutura
@@ -134,11 +148,13 @@ jobs:
           if [ "$ACTION" == "destroy" ]; then
             echo "⚠️ Executando Destroy COMPLETO da infraestrutura..."
             terraform -chdir=terraform/layers/02-kubernetes destroy -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
+            terraform -chdir=terraform/layers/04-storage destroy -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
             terraform -chdir=terraform/layers/03-database destroy -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
             terraform -chdir=terraform/layers/01-base-infra destroy -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
           else
             terraform -chdir=terraform/layers/01-base-infra $ACTION -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
             terraform -chdir=terraform/layers/03-database $ACTION -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
+            terraform -chdir=terraform/layers/04-storage $ACTION -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
             terraform -chdir=terraform/layers/02-kubernetes $ACTION -auto-approve -input=false -var-file="../../../terraform.auto.tfvars"
           fi
 
